--- a/_posts/2017-04-17-bitcoin.md
+++ b/_posts/2017-04-17-bitcoin.md
@@ -24,7 +24,7 @@ At the heart of Bitcoin is the use of a Public Key, Secret Key pair for identiti
 ### Problems with E-Cash: Double Spending
 One of the main issues presented in the digital currency world is that of preventing double spending. **In the "physical money" world, double spending is pretty much impossible.** If you pay with physical cash, you can't magically produce 2 copies of the same \$10 bill and give it to 2 different people. And if you're paying with a credit card or bank, well, the bank has a pretty strong incentive to make sure you can't double-spend. But in the digital currency world, when our idea of "cash" is just strings of bits, double spending is a lot easier.
 
-**Bitcoin prevents against double spending with a public ledger, a public history of all transactions that have happened.** This means that if Alice gives a bitcoin (let's say this coin's ID is $c_A$) to Bob, and then later gives that same coin to Charlie, Charlie can check the ledger before accepting her coin, and see that she's already given the coin with ID $c_A$ to Bob. This public ledger is also known as **the "blockchain"**.
+**Bitcoin prevents against double spending with a public ledger, a public history of all transactions that have happened.** This means that if Alice gives a bitcoin (let's say this coin's ID is $$c_A$$) to Bob, and then later gives that same coin to Charlie, Charlie can check the ledger before accepting her coin, and see that she's already given the coin with ID $$c_A$$ to Bob. This public ledger is also known as **the "blockchain"**.
 
 ### Mechanics of the Public Ledger
 Before we get into the nitty gritty of how this public ledger is maintained, let's begin with an overview of the structure of the blockchain. Each block is a set of transactions (we group them together for efficiency). **To ensure the integrity of the order of the blockchain, each block contains a hash of the block that came before it.**
@@ -47,10 +47,10 @@ So, **who gets to add transactions and when?** We need to solve two problems her
 1. **We want everyone to have an equal chance of adding transactions to the blockchain**, so that we can ensure that our decentralized system remains decentralized.
 2. **We want there to be some kind of "wait time" between transactions.** This is a problem because the Internet is naturally asynchronous. We don't want 100 people trying to add a transaction at the same time --- that will create 100 forks in the blockchain all at once, and will make it a bit difficult for nodes in the network to figure out which branch is the valid one that they should keep adding on to.  
 
-**Bitcoin cleverly solves both problems by using computing power as "the great equalizer".** In other words, we expect that computing power is not something that one person can totally monopolize, so making the only barrier to entry for this game of who-gets-to-add-the-next-block be computing power, basically, anyone can play. In some sense, the game boils down to this: I have a magic number, and I want you to guess it. You can send me as many guesses as you'd like as fast as you'd like, but at the end of the day, anyone with a computer can guess my number, and even the 10-year-old kid using his mom's PC has a non-negative probability of being the first person to guess my number correctly. And if I tell you this number is anywhere between 1 and $2^{200}$, I can be decently assured that there will be a non-negligible wait time between correct guesses of my "magic number".
+**Bitcoin cleverly solves both problems by using computing power as "the great equalizer".** In other words, we expect that computing power is not something that one person can totally monopolize, so making the only barrier to entry for this game of who-gets-to-add-the-next-block be computing power, basically, anyone can play. In some sense, the game boils down to this: I have a magic number, and I want you to guess it. You can send me as many guesses as you'd like as fast as you'd like, but at the end of the day, anyone with a computer can guess my number, and even the 10-year-old kid using his mom's PC has a non-negative probability of being the first person to guess my number correctly. And if I tell you this number is anywhere between 1 and $$2^{200}$$, I can be decently assured that there will be a non-negligible wait time between correct guesses of my "magic number".
 
 ### POW: Proof of Work
-But of course, I promised you a low-level explanation of how Bitcoin works, so let's get our hands a little dirty. **To add a block to the blockchain, you need to find a number (called a "nonce") such that the hash of the nonce + the previous hash + the transactions of the block is less than some target value, where the target value is often represented $2^{256-D}$, where $D$ is the "difficulty level".** In other words, find the nonce so that the output of the SHA-256 hash begins with $D$ zeroes. Since SHA-256 is presumed to be secure, the only way to find such a nonce would be to use brute force---try all the numbers you can until you find one that works. $D$ increases over time (as there become more miners, and thus the puzzles are solved faster) and is set so that the average time between successively added blocks is about 10 minutes.
+But of course, I promised you a low-level explanation of how Bitcoin works, so let's get our hands a little dirty. **To add a block to the blockchain, you need to find a number (called a "nonce") such that the hash of the nonce + the previous hash + the transactions of the block is less than some target value, where the target value is often represented $$2^{256-D}$$, where $$D$$ is the "difficulty level".** In other words, find the nonce so that the output of the SHA-256 hash begins with $$D$$ zeroes. Since SHA-256 is presumed to be secure, the only way to find such a nonce would be to use brute force---try all the numbers you can until you find one that works. $$D$$ increases over time (as there become more miners, and thus the puzzles are solved faster) and is set so that the average time between successively added blocks is about 10 minutes.
 
 There is, of course, still the possibility that multiple miners will find a nonce at the same time. In these cases, the blockchain will fork. So which chain is the valid chain? Bitcoin's standard is simply to use the longest chain. For this reason, **it's standard practice to not accept a transaction from someone until several more blocks (around 6) have been added to the blockchain,** to ensure that that transaction really did go through.
 
